@@ -82,7 +82,6 @@ y por tanto a nivel de path de indexacion de busqueda, se pierde el ultimo path 
 
 -en daad debug, pulsar m de condmessage, sale dos veces (con cozumel 1 y inventario)
 
--en menus al moverse con pgup down creo que no siempre va bien, por ejemplo en tracks list de +3 al pgdn siempre queda abajo, mientras que pgup no
 
 
 -En visor dsk que solo muestre primer extent de un archivo. ya esta??
